--- a/dashboard/template/dashboard/dashboard_base.html
+++ b/dashboard/template/dashboard/dashboard_base.html
@@ -172,7 +172,7 @@
     <nav class="navbar navbar-expand-lg border-bottom">
       <div class="container-fluid">
         <!-- Logo -->
-        <a class="navbar-brand" href="/">Best Time</a>
+        <a class="navbar-brand" href="{% url 'dashboard' %}">Best Time</a>
 
         <!-- Hamburger Menu -->
         <button
@@ -229,12 +229,7 @@
                   ><i class="bi bi-person"></i> My Profile</a
                 >
               </li>
-              <li>
-                <a class="dropdown-item" href="{% url 'cart_view' %}"
-                  ><i class="bi bi-cart"></i> My Cart
-                  <span class="icon-badge">9+</span></a
-                >
-              </li>
+          
               <li>
                 <a class="dropdown-item" href="#"
                   ><i class="bi bi-envelope"></i> Messages
